--- a/module-app/app-conf/department.properties
+++ b/module-app/app-conf/department.properties
@@ -3,3 +3,6 @@ spring.data.mongodb.database: admin
 spring.data.mongodb.authentication-database: admin
 
 server.forward-headers-strategy: framework
+
+openapi.oauthflow.authServerUrl: https://keycloak.greeta.net
+openapi.oauthflow.realm: erp-realm
