--- a/module-app/app-conf/employee.yml
+++ b/module-app/app-conf/employee.yml
@@ -6,12 +6,12 @@ spring:
       authentication-database: admin
 
   keycloak:
-      server-url: https://keycloak.greeta.net
+      server-url: http://keycloak-server:8080
   security:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: ${spring.keycloak.server-url}/realms/company-services
+          issuer-uri: ${spring.keycloak.server-url}/realms/erp-realm
           jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 
 server:
@@ -24,5 +24,8 @@ jwt:
       principal-attribute: preferred_username
 
 erp-app:
-  base-url: http://localhost:3000
+  base-url: https://erp.greeta.net
   redirect-url: ${erp-app.base-url}/*
+
+openapi.oauthflow.authServerUrl: https://keycloak.greeta.net
+openapi.oauthflow.realm: erp-realm
