--- a/module-app/app-conf/department.yml
+++ b/module-app/app-conf/department.yml
@@ -23,15 +23,15 @@ jwt:
       resource-id: erp-app
       principal-attribute: preferred_username
 
-erp-app:
-  base-url: https://erp.greeta.net
-  redirect-url: ${erp-app.base-url}/*
-
-app:
-  cors:
-    allowed-origins: ${erp-app.base-url}  
-
 openapi:
   oauthflow:
     authServerUrl: https://keycloak.greeta.net
     realm: erp-realm
+
+erp-app:
+  base-url: https://erp.greeta.net
+  redirect-url: ${erp-app.base-url}/*
+
+movie-app:
+  base-url: https://movie.greeta.net
+  redirect-url: ${movie-app.base-url}/*    
